# devilutionX

./: CMakeLists.txt  README.md  build_ios.sh
ios/: .gitignore  CMakeLists.txt  fetch_dependencies.sh  fetch_sdl.sh  generate_dependencies_project.sh  generate_project.sh
ios/Xcode/DevilutionX-iOS.xcodeproj/: project.pbxproj
ios/Xcode/DevilutionX-iOS/DevilutionX-iOS.xcodeproj/: project.pbxproj
ios/Xcode/DevilutionX-iOS/Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/Xcode/DevilutionX-iOS/Resources/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
ios/Xcode/DevilutionX-iOS/Sources/: AppDelegate.h  AppDelegate.m  AppDelegate.mm
